# facial-screen-capture

./: .gitignore  README.md  clip_extractor.py  main.py  pyproject.toml  test_extract.py
clip_editor/: __init__.py  detection.py  server.py
clip_editor/static/: app.js  index.html  style.css
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ClipItem.tsx  Header.tsx  LoadModal.tsx  Sidebar.tsx  Timeline.tsx  VideoPlayer.tsx
frontend/hooks/: useTimeline.ts  useVideoPlayer.ts
frontend/lib/: api.ts
frontend/stores/: editorStore.ts
frontend/types/: index.ts
