[project]
name = "facial-screen-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "opencv-python>=4.12.0.88",
    "pathlib>=1.0.1",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
