[project]
name = "facial-screen-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "insightface>=0.7.3",
    "nvidia-cudnn-frontend>=1.16.0",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pathlib>=1.0.1",
]
