[project]
name = "facial-screen-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=16.0.1",
    "face-recognition>=1.3.0",
    "insightface>=0.7.3",
    "mediapipe>=0.10.14",
    "nvidia-cudnn-frontend>=1.16.0",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pathlib>=1.0.1",
    "setuptools>=80.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]
